RESOLVED FIXED185724
[MSE][GStreamer] Stream::decodebinSinkPad is read but never assigned
https://bugs.webkit.org/show_bug.cgi?id=185724
Summary [MSE][GStreamer] Stream::decodebinSinkPad is read but never assigned
Alicia Boya García
Reported 2018-05-17 06:39:32 PDT
This is a dead code removal patch; except when a Stream instance happens to be instantiated in such a place that the non-initialized decodeSinkPad is != 0, then it is a crash bug fix.
Attachments
Patch (2.82 KB, patch)
2018-05-17 06:40 PDT, Alicia Boya García
no flags
Alicia Boya García
Comment 1 2018-05-17 06:40:40 PDT
WebKit Commit Bot
Comment 2 2018-05-21 08:28:34 PDT
Comment on attachment 340578 [details] Patch Clearing flags on attachment: 340578 Committed r232015: <https://trac.webkit.org/changeset/232015>
WebKit Commit Bot
Comment 3 2018-05-21 08:28:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.