[MSE][GStreamer] Stream::decodebinSinkPad is read but never assigned https://bugs.webkit.org/show_bug.cgi?id=185724

Reviewed by Xabier Rodriguez-Calvar.

This is a dead code removal patch; except when a Stream instance
happens to be instantiated in such a place that the non-initialized
decodeSinkPad is != 0, then it is a crash bug fix.

* platform/graphics/gstreamer/mse/WebKitMediaSourceGStreamer.cpp:
(webKitMediaSrcLinkStreamToSrcPad):
* platform/graphics/gstreamer/mse/WebKitMediaSourceGStreamerPrivate.h:


Canonical link: https://commits.webkit.org/201274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232015 268f45cc-cd09-0410-ab3c-d52691b4dbfc